# austin-public-library-music-cd-list

./: .gitignore  README.md  cd_metadata_output_2023-07-30.csv.xz  example.json  fetch_library_cds.py  lookup.py  lookup_red.py  pyproject.toml  run.py
